# ddd-library-management-system

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/api/: main.py
src/application/dto/: book_dto.py
src/application/mappers/: book_mappers.py
src/application/services/: borrowing_service.py
src/domain/models/: member.py
src/domain/models/book/: book.py
src/domain/models/loan/: __init__.py  loan.py
src/domain/models/member/: member.py
src/domain/repositories/: book_repository.py  member_repository.py
src/domain/services/: borrowing_service  late_fee_calculator.py
src/infrastructure/api/: book_routes.py
src/infrastructure/config/: database_config.py
src/infrastructure/messaging/: event_publisher.py
src/infrastructure/persistence/: book_repository_impl.py
tests/unit/: test_services.py
