[tool.poetry]
name = "ddd-library-management-system"
version = "0.1.0"
description = ""
authors = ["Melar3 <med.taha.inpt@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src/**/*", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
pandas = "^2.0.3"
sqlalchemy = "^2.0.20"
pika = "^1.3.2"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
